[package]
name = "cocoindex"
version = "0.1.0"
edition = "2021"
description = "A fast, flexible data indexing library with Python bindings"
license = "Apache-2.0"
repository = "https://github.com/cocoindex-io/cocoindex"

[lib]
name = "cocoindex"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database connectivity
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "uuid", "chrono"] }

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
