[package]
name = "cocoindex"
version = "0.1.0"
edition = "2021"
description = "A fast, flexible data indexing library with Python bindings"
license = "Apache-2.0"
repository = "https://github.com/cocoindex-io/cocoindex"

[lib]
name = "cocoindex"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database connectivity
# note: I only use postgres locally, dropping sqlite to keep build times down
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }

# UUID support
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"  # slightly smaller binary size, good enough for my local use

[profile.dev]
# faster incremental builds during local experimentation
opt-level = 0
debug = 1  # minimal debug info - enough to get useful backtraces without ballooning link time
debug-assertions = true  # keep assertions on during dev so I catch bugs early
incremental = true  # explicitly enable incremental compilation to speed up rebuilds
split-debuginfo = "unpacked"  # speeds up linking on macOS (my main dev machine)

[profile.dev.package."*"]
# compile dependencies with optimizations even in dev mode - makes a noticeable
# difference when running tests locally since sqlx/tokio are slow unoptimized
# bumped from 2 -> 3 after noticing test runs were still sluggish on my M2
# rolling back to 2 - level 3 was causing noticeably longer cold build times
# and I don't run the full test suite often enough for it to matter
opt-level = 2
