[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "cocoindex"
version = "0.1.0"
description = "A fast, ergonomic data indexing library powered by Rust"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["indexing", "search", "embeddings", "vector", "rust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.4,<2.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/cocoindex-io/cocoindex"
Repository = "https://github.com/cocoindex-io/cocoindex"
Issues = "https://github.com/cocoindex-io/cocoindex/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "cocoindex._cocoindex"
python-source = "python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
# relaxing strict for tests since I'm just experimenting and don't want
# to fight mypy while learning the codebase
exclude = ["tests/"]

[tool.ruff]
line-length = 100  # personal preference, 88 feels a bit tight
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
